--- a/list.html
+++ b/list.html
@@ -1,11 +1,37 @@
 <html>
-<body>
-   <h2>TYBCS subject</h2>
-    <ol type="a" start="1">
-      <li>Java</li>
-      <li>php
-      <li>Python
-      <li>Ds
-	<li>Tcs
+<!--  set A) 
+ Q1) create a HTML documents to display the following screen 
+-->
+     <head>
+   <title>LIST</title>
+    </head>
+ <body>
+ <h1>List of indian states with thier capital</h1>
+ <ol type="1">
+<li>Delhi
+<ul type="circle">
+<li>New Delhi 
+</ul>
+<li>Haryana
+<ul type="circle">
+<li>Chandighar 
+</ul>
+<li>Gujrat
+<ul type="circle">
+<li>Gandhinagar 
+</ul>
+<li>Rajsthan
+<ul type="circle">
+<li>Jaipur 
+</ul>
+<li>Maharastra
+<ul type="circle">
+<li>Mumbai 
+</ul>
+<li>Uttarpradesh
+<ul type="circle">
+<li>Lucknow						 
+</ul>
+</ol>
 </body>
 </html>
