--- a/table.html
+++ b/table.html
@@ -1,28 +1,28 @@
-<table border="1" width="50%" height="40%" bgcolor="pink" background="karn.jpg">
-  <caption>student</caption>
-    <tr >
-         <th>Roll No</th>
-         <th>Name</th>
-         <th>Per</th>
-   </tr>
-   <tr bgcolor="#B0B0B0">
-      <td align="center">1
-      <td valign="top" align="right">om
-      <td>77.66
-   </tr>
-   <tr align="right" valign="bottom" bgcolor="gray">
-      <td>2
-      <td>Ram
-      <td>35.66
-   </tr>
-   <tr bgcolor="#B0B0B0">
-      <td>3
-      <td>sai
-      <td>65.66
-   </tr>
-   <tr bgcolor="gray" align="right">
-      <td>4
-      <td>sham
-      <td>88.66
-   </tr>
+<!-- Q2. Write a HTML code Which generate the following output -->
+<html>
+<body>
+ <table border="2" Cellspacing="4" Cellpadding="4" BorderColor="red"  align="center" bgcolor="skyblue" height="300" width="500">
+<caption>Lst of Books</caption>
+<tr>
+<th rowspan="2">Item No</th>
+<th rowspan="2">Item Name</th>
+<th colspan="2">Price</th>
+</tr>
+<tr>
+<th>Rs.</th>
+<th>Paise.</th>
+</tr>
+<tr>
+<td>1</td>
+<td>Programming in Python</td>
+<td>500</td>
+<td>50</td>
+</tr>
+<td>2</td>
+<td>Programming in Java</td>
+<td>345</td>
+<td>00</td>
+</tr>
 </table>
+</body>
+</html>
